--- a/_config.yml
+++ b/_config.yml
@@ -88,10 +88,10 @@ social:
 #    - "https://facebook.com/michaelrose"
 
 # Analytics
-#analytics:
-#  provider               : "google-universal" # false (default), "google", "google-universal", "custom"
-#  google:
-#    tracking_id          : "UA-2011187-3" # Replace this with your ID, or delete
+analytics:
+  provider               : "google-universal" # false (default), "google", "google-universal", "custom"
+  google:
+    tracking_id          : "UA-115102666-1" # Replace this with your ID, or delete
 
 
 # Site Author
