--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -22,6 +22,10 @@ foo:
 main:
 #  - title: "Quick-Start Guide"
 #    url: /docs/quick-start-guide/
+  - title: "Publish"
+    url: /publish/intro/
+  - title: "Use"
+    url: /use/intro/
   - title: "News"
     url: /year-archive/
   - title: "About"
@@ -33,101 +37,84 @@ main:
 
 
 # documentation links
-docs:
+publish:
   - title: Getting Started
     children:
-      - title: "Quick-Start Guide"
-        url: /docs/quick-start-guide/
-      - title: "Structure"
-        url: /docs/structure/
-      - title: "Installation"
-        url: /docs/installation/
-      - title: "Upgrading"
-        url: /docs/upgrading/
-  - title: Customization
+      - title: "Introduction"
+        url: /publish/intro/
+      - title: "Survey datasets"
+        url: /publish/survey/
+  - title: Planning for innovation
     children:
-      - title: "Configuration"
-        url: /docs/configuration/
-      - title: "Overriding Theme Defaults"
-        url: /docs/overriding-theme-defaults/
-      - title: "Navigation"
-        url: /docs/navigation/
-      - title: "UI Text"
-        url: /docs/ui-text/
-      - title: "Authors"
-        url: /docs/authors/
-      - title: "Layouts"
-        url: /docs/layouts/
-  - title: Content
+      - title: "Selecting datasets to publish"
+        url: /publish/select/
+      - title: "Selecting license"
+        url: /publish/license/
+      - title: "One city is not a market"
+        url: /publish/todo/
+  - title: Preparing data and APIs
     children:
-      - title: "Working with Posts"
-        url: /docs/posts/
-      - title: "Working with Pages"
-        url: /docs/pages/
-      - title: "Working with Collections"
-        url: /docs/collections/
-      - title: "Helpers"
-        url: /docs/helpers/
-      - title: "Utility Classes"
-        url: /docs/utility-classes/
-  - title: Extras
+      - title: "Prepare data"
+        url: /publish/todo/
+      - title: "Develop APIs"
+        url: /publish/todo/
+      - title: "Standardisation"
+        url: /publish/todo/
+      - title: "Documenting data and APIs"
+        url: /publish/todo/          
+  - title: Publishing
     children:
-      - title: "Stylesheets"
-        url: /docs/stylesheets/
-      - title: "JavaScript"
-        url: /docs/javascript/
-  - title: Meta
-    children:
-      - title: "History"
-        url: /docs/history/
-      - title: "Contributing"
-        url: /docs/contributing/
-      - title: "Old 2.2 Docs"
-        url: /docs/docs-2-2/
-      - title: "License"
-        url: /docs/license/
-      - title: "Terms &amp; Privacy Policy"
-        url: /terms/
+      - title: "Register datasets"
+        url: /publish/todo/
+      - title: "Define metadata"
+        url: /publish/todo/
+      - title: "Create awareness"
+        url: /publish/todo/
+      - title: "Dialog and feedback"
+        url: /publish/todo/
 
-# sidebar navigation list sample
-sidebar-sample:
-  - title: "Parent Page A"
+# documentation links
+use:
+  - title: Getting Started
     children:
-      - title: "Child Page A1"
-        url: /
-      - title: "Child Page A2"
-        url: /
-      - title: "Child Page A3"
-        url: /
-      - title: "Child Page A4"
-        url: /
-  - title: "Parent Page B"
+      - title: "Introduction"
+        url: /use/intro/
+      - title: "Finding datasets"
+        url: /use/todo/
+  - title: Selecting datasets to use
     children:
-      - title: "Child Page B1"
-        url: /
-      - title: "Child Page B2"
-        url: /
-      - title: "Child Page B3"
-        url: /
-      - title: "Child Page B4"
-        url: /
-      - title: "Child Page B5"
-        url: /
-  - title: "Parent Page C"
+      - title: "Finding datasets"
+        url: /use/todo/
+      - title: "Documentation and examples"
+        url: /use/todo/
+      - title: "Exploring related data"
+        url: /use/todo/
+      - title: "APIs and data formats"
+        url: /use/todo/
+      - title: "Terms of use"
+        url: /use/todo/
+      - title: "Data coverage and quality"
+        url: /use/todo/
+  - title: Developing services with open data
     children:
-      - title: "Child Page C1"
-        url: /
-      - title: "Child Page C2"
-        url: /
-      - title: "Child Page C3"
-        url: /
-      - title: "Child Page C4"
-        url: /
-      - title: "Child Page C5"
-        url: /
-  - title: "Parent Page D"
+      - title: "Define service concepts"
+        url: /use/todo/
+      - title: "Prepare data"
+        url: /use/todo/
+      - title: "Transform, filter, aggregate"
+        url: /use/todo/
+      - title: "Connect data"
+        url: /use/todo/
+      - title: "Define data workflow"
+        url: /use/todo/
+      - title: "Visualize data"
+        url: /use/todo/
+      - title: "Use API"
+        url: /use/todo/
+      - title: "Publish servie"
+        url: /use/todo/
+  - title: Community
     children:
-      - title: "Child Page D1"
-        url: /
-      - title: "Child Page D2"
-        url: /
+      - title: "Provide feedback on open data"
+        url: /use/todo/
+
