add description for metadata and semantic search in metadata under publish

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -69,7 +69,7 @@ publish:
       - title: "Register datasets"
         url: /publish/todo/
       - title: "Define metadata"
-        url: /publish/todo/
+        url: /publish/metadata/
       - title: "Create awareness"
         url: /publish/todo/
       - title: "Dialog and feedback"
