--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -38,7 +38,7 @@ main:
 
 # documentation links
 publish:
-  - title: Publsih Data - Getting Started
+  - title: Publishing Data - Getting Started
     children:
       - title: "Introduction"
         url: /publish/intro/
@@ -52,27 +52,27 @@ publish:
         url: /publish/select/
       - title: "Selecting license"
         url: /publish/license/
-      - title: "One city is not a market"
+      - title: "<i>One city is not a market</i>"
         url: /publish/todo/
   - title: Preparing data and APIs
     children:
-      - title: "Prepare data"
+      - title: "<i>Prepare data</i>"
         url: /publish/todo/
-      - title: "Develop APIs"
+      - title: "<i>Develop APIs</i>"
         url: /publish/todo/
-      - title: "Standardisation"
+      - title: "<i>Standardisation</i>"
         url: /publish/todo/
-      - title: "Documenting data and APIs"
+      - title: "<i>Documenting data and APIs</i>"
         url: /publish/todo/          
   - title: Publishing
     children:
-      - title: "Register datasets"
+      - title: "<i>Register datasets</i>"
         url: /publish/todo/
-      - title: "Define metadata"
+      - title: "<i>Define metadata</i>"
         url: /publish/todo/
-      - title: "Create awareness"
+      - title: "<i>Create awareness</i>"
         url: /publish/todo/
-      - title: "Dialog and feedback"
+      - title: "<i>Dialog and feedback</i>"
         url: /publish/todo/
 
 # documentation links
@@ -81,42 +81,42 @@ use:
     children:
       - title: "Introduction"
         url: /use/intro/
-      - title: "Finding datasets"
+      - title: "<i>Finding datasets</i>"
         url: /use/todo/
   - title: Selecting datasets to use
     children:
-      - title: "Finding datasets"
+      - title: "<i>Finding datasets</i>"
         url: /use/todo/
-      - title: "Documentation and examples"
+      - title: "<i>Documentation and examples</i>"
         url: /use/todo/
-      - title: "Exploring related data"
+      - title: "<i>Exploring related data</i>"
         url: /use/todo/
-      - title: "APIs and data formats"
+      - title: "<i>APIs and data formats</i>"
         url: /use/todo/
-      - title: "Terms of use"
+      - title: "<i>Terms of use</i>"
         url: /use/todo/
-      - title: "Data coverage and quality"
+      - title: "<i>Data coverage and quality</i>"
         url: /use/todo/
   - title: Developing services with open data
     children:
-      - title: "Define service concepts"
+      - title: "<i>Define service concepts</i>"
         url: /use/todo/
-      - title: "Prepare data"
+      - title: "<i>Prepare data</i>"
         url: /use/todo/
-      - title: "Transform, filter, aggregate"
+      - title: "<i>Transform, filter, aggregate</i>"
         url: /use/todo/
-      - title: "Connect data"
+      - title: "<i>Connect data</i>"
         url: /use/todo/
-      - title: "Define data workflow"
+      - title: "<i>Define data workflow</i>"
         url: /use/todo/
-      - title: "Visualize data"
+      - title: "<i>Visualize data</i>"
         url: /use/todo/
-      - title: "Use API"
+      - title: "<i>Use API</i>"
         url: /use/todo/
-      - title: "Publish servie"
+      - title: "<i>Publish servie</i>"
         url: /use/todo/
   - title: Community
     children:
-      - title: "Provide feedback on open data"
+      - title: "<i>Provide feedback on open data</i>"
         url: /use/todo/
 
