Small fix to find datasets and updated config ang gemfiles

--- a/_config.yml
+++ b/_config.yml
@@ -289,6 +289,7 @@ plugins:
   - jekyll-gist
   - jekyll-feed
   - jekyll-redirect-from
+  - jekyll-include-cache
   - jemoji
 
 # mimic GitHub Pages with --safe
